# pipeline

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
agent-csharp/: AgentApp.csproj  Config.cs  Program.cs  README.md
agent-csharp/Drivers/: IHardwareDriver.cs  MockDriver.cs  ModbusTcpDriver.cs
agent-csharp/Models/: CommandResult.cs  ExecuteRequest.cs  HeartbeatPayload.cs  SensorData.cs
agent-csharp/Services/: CentralServerClient.cs  HeartbeatBackgroundService.cs
data/config/: validation_criteria.yaml  validation_criteria_battery.yaml
data/raw/: BATTERY-2024-001_overvoltage_cc_charge.md  BATTERY-2024-002_overcurrent_protection.md  BATTERY-2024-003_temperature_shutdown.md  BATTERY-2024-004_cell_imbalance.md  BATTERY-2024-005_uvp_over_discharge.md  BATTERY-2024-006_otp_formation.md  BATTERY-2024-007_ocp_inrush_psu_b.md  BATTERY-2024-008_cell_imbalance_severe.md  BATTERY-2024-009_soc_mismatch.md  BATTERY-2024-010_bms_firmware_error.md  BATTERY-2024-011_low_temperature_plating.md  BATTERY-2024-012_impedance_rise_aging.md  BATTERY-2024-013_cv_convergence_fail.md  (+21 more)
docs/: issue-template-battery.md  issue-template-software.md  protocol-spec.md
scripts/: alarm_adapter.py  demo_alarm.py  demo_equipment.py  index_documents.py  query_cli.py  start_server.py
src/: _agent_lock.py  config.py  logger.py  missed_queries.py  pipeline.py
tests/: test_alarm_adapter.py  test_alarm_api.py  test_api.py  test_chat_repository.py  test_chat_router.py  test_chunker_korean.py  test_config.py  test_embedder.py  test_equipment.py  test_generator.py  test_ingestion.py  test_llm_clients.py  test_pipeline_llm.py  test_qa_api.py  test_qa_elaboration.py  test_qa_feasibility.py  test_qa_report_generator.py  test_retriever.py  test_test_result_parser.py
(+50 files in other folders)
